Create and view pages with new resources and routing system